(fix): fixed text wrapping in dishes items

--- a/css/styles.css
+++ b/css/styles.css
@@ -625,6 +625,7 @@
 .menu-content__body {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 1.5rem;
   margin-top: 1.5rem; }
   .menu-content__body .menu-content__dishes:nth-of-type(1) {
@@ -701,7 +702,9 @@
 .menu-content__dishes {
   display: flex;
   flex-direction: column;
-  gap: 1rem; }
+  gap: 1rem;
+  width: 100%;
+  max-width: 342.39px; }
   .menu-content__dishes h2 {
     font-size: 20px;
     font-weight: 500; }
@@ -757,6 +760,7 @@
 .menu-content__dishes-list {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 1rem; }
 
 @keyframes component-loading {
@@ -802,6 +806,8 @@
 
 .menu-content__dishes-list li {
   height: 65px;
+  width: 100%;
+  max-width: 342.4px;
   display: flex;
   align-items: center;
   border-radius: 0.8rem;
@@ -814,14 +820,19 @@
     overflow: hidden;
     text-overflow: ellipsis; }
   .menu-content__dishes-list li p {
-    font-size: 0.8rem; }
+    font-size: 0.8rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; }
   .menu-content__dishes-list li span {
     font-size: 0.9rem;
     font-weight: 800; }
   .menu-content__dishes-list li .left {
     max-width: 246.36px;
+    width: 100%;
     padding: 0.5rem 0 0.5rem 0.5rem;
-    flex: 1; }
+    flex: 1;
+    overflow: hidden; }
     .menu-content__dishes-list li .left:hover {
       cursor: pointer; }
   .menu-content__dishes-list li:hover {
@@ -838,6 +849,7 @@
     flex-direction: row-reverse;
     align-items: flex-end;
     height: 100%;
+    width: 96.04px;
     border-radius: 0 0.8rem 0.8rem 0;
     overflow: hidden; }
     .menu-content__dishes-list li .right .price {
