--- a/scss/Menus/components/_menuBody.scss
+++ b/scss/Menus/components/_menuBody.scss
@@ -3,6 +3,7 @@
 .menu-content__body {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 1.5rem;
   margin-top: 1.5rem;
 
