--- a/scss/Menus/components/_menuDishes.scss
+++ b/scss/Menus/components/_menuDishes.scss
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  width: 100%;
+  max-width: 342.39px;
 
   h2 {
     font-size: $font-size-h2;
