--- a/scss/Menus/components/_menuDishesList.scss
+++ b/scss/Menus/components/_menuDishesList.scss
@@ -3,5 +3,6 @@
 .menu-content__dishes-list {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 1rem;
 }
