--- a/scss/Menus/components/_menuDishesListItem.scss
+++ b/scss/Menus/components/_menuDishesListItem.scss
@@ -2,6 +2,8 @@
 
 .menu-content__dishes-list li {
   height: 65px;
+  width: 100%;
+  max-width: 342.4px;
   display: flex;
   align-items: center;
   border-radius: 0.8rem;
@@ -18,6 +20,9 @@
 
   p {
     font-size: 0.8rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   span {
@@ -27,8 +32,10 @@
 
   .left {
     max-width: 246.36px;
+    width: 100%;
     padding: 0.5rem 0 0.5rem 0.5rem;
     flex: 1;
+    overflow: hidden;
 
     &:hover {
       cursor: pointer;
@@ -56,6 +63,7 @@
     flex-direction: row-reverse;
     align-items: flex-end;
     height: 100%;
+    width: 96.04px;
     border-radius: 0 0.8rem 0.8rem 0;
     overflow: hidden;
     .price {
